@@ -2,19 +2,21 @@ if GLX
 GLX_LIB = $(top_builddir)/hw/xgl/glxext/libxglglxext.la
 endif
 
-AM_CFLAGS = \
-	-I$(srcdir)/.. \
-	-I$(srcdir)/../.. \
+LIBXGLX_LIBS =				      \
+	$(top_builddir)/hw/xgl/glx/libxglx.la \
+	$(GLX_LIB)
+
+AM_CFLAGS =			   \
+	-I$(top_srcdir)/hw/xgl/glx \
+	-I$(top_srcdir)/hw/xgl	   \
 	$(XGLXMODULES_CFLAGS)
 
-libxglx_la_DEPENDENCIES = $(GLX_LIB)
+libxglx_la_DEPENDENCIES = $(LIBXGLX_LIBS)
 libxglx_la_LDFLAGS = -avoid-version
 libxglx_la_SOURCES = xglxmodule.c
-libxglx_la_LIBADD = \
-	$(top_builddir)/hw/xgl/glx/libxglx.la \
-	$(GLX_LIB) \
-	$(XGLXMODULES_LIBS) \
-	-lXrandr
+libxglx_la_LIBADD =	\
+	$(LIBXGLX_LIBS)	\
+	$(XGLXMODULES_LIBS)
 
 moduledir = @xglmoduledir@
 
