@@ -1,20 +1,20 @@
 SUBDIRS = module
 
-AM_CFLAGS =		 \
-	@SERVER_DEFINES@ \
-	-DHAVE_XGL_CONFIG_H \
-	-DHAVE_DIX_CONFIG_H \
-	$(XGLMODULES_CFLAGS) \
-	-I$(top_srcdir)/GL/glx \
+AM_CFLAGS =			   \
+	@SERVER_DEFINES@	   \
+	-DHAVE_XGL_CONFIG_H	   \
+	-DHAVE_DIX_CONFIG_H	   \
+	$(XGLMODULES_CFLAGS)	   \
+	-I$(top_srcdir)/GL/glx	   \
 	-I$(top_srcdir)/GL/include \
-	-I$(top_srcdir)/hw/xgl \
-	-I@MESA_SOURCE@/include \
+	-I$(top_srcdir)/hw/xgl	   \
+	-I@MESA_SOURCE@/include	   \
 	-I@MESA_SOURCE@/src/mesa/glapi
 
 libxglglxext_libraries = libxglglxext.la
 libxglglxext_la_SOURCES = \
 	xglglxext.h	  \
-	xglglxext.c       \
+	xglglxext.c	  \
 	xglglxlog.c
 
 noinst_LTLIBRARIES = $(libxglglxext_libraries)
